[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.028
anchor_top = 0.261
anchor_right = 0.028
anchor_bottom = 0.261
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
scale = Vector2( 3, 3 )

[node name="StartButton" type="Button" parent="GridContainer"]
offset_right = 63.0
offset_bottom = 20.0
focus_neighbor_bottom = NodePath("../OptionButton")
text = "Start"

[node name="OptionButton" type="Button" parent="GridContainer"]
offset_top = 24.0
offset_right = 63.0
offset_bottom = 44.0
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../ExitButton")
text = "Options"

[node name="ExitButton" type="Button" parent="GridContainer"]
offset_top = 48.0
offset_right = 63.0
offset_bottom = 68.0
focus_neighbor_top = NodePath("../OptionButton")
focus_neighbor_bottom = NodePath("../StartButton")
text = "Exit"

[connection signal="focus_entered" from="GridContainer/StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="mouse_entered" from="GridContainer/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="GridContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="GridContainer/OptionButton" to="." method="_on_OptionButton_focus_entered"]
[connection signal="mouse_entered" from="GridContainer/OptionButton" to="." method="_on_OptionButton_mouse_entered"]
[connection signal="pressed" from="GridContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="focus_entered" from="GridContainer/ExitButton" to="." method="_on_ExitButton_focus_entered"]
[connection signal="mouse_entered" from="GridContainer/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="GridContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
